package org.gbif.maps.io;

option optimize_for = LITE_RUNTIME;

/**
 * A basic point feature that holds a latitude, longitude, basisOfRecord, year and the count.
 */
message PointFeatures {

  message Feature {
    // this should hold the same values that the GBIF API support for consistency
    enum BasisOfRecord {
      UNKNOWN = 0; // Deprecated
      PRESERVED_SPECIMEN = 1;
      FOSSIL_SPECIMEN = 2;
      LIVING_SPECIMEN = 3;
      OBSERVATION = 4;
      HUMAN_OBSERVATION = 5;
      MACHINE_OBSERVATION = 6;
      MATERIAL_SAMPLE = 7;
      LITERATURE = 8; // Deprecated
      OCCURRENCE = 9;
      MATERIAL_CITATION = 10;
    }

    required double latitude = 1;
    required double longitude = 2;
    required BasisOfRecord basisOfRecord = 3;
    optional uint32 year = 4 [default = 0];
    optional uint32 count = 5 [default = 1];
  }

  repeated Feature features = 1;
}
