package org.gbif.maps.io;

option optimize_for = LITE_RUNTIME;

/**
 * An optimized encoding for tile data.
 */
message TileFeatures {

  // a layer contains the basis of record and year data
  message Layer {
    // this should hold the same values that the GBIF API support for consistency
    enum BasisOfRecord {
      UNKNOWN = 0; // Deprecated
      PRESERVED_SPECIMEN = 1;
      FOSSIL_SPECIMEN = 2;
      LIVING_SPECIMEN = 3;
      OBSERVATION = 4;
      HUMAN_OBSERVATION = 5;
      MACHINE_OBSERVATION = 6;
      MATERIAL_SAMPLE = 7;
      LITERATURE = 8; // Deprecated
      OCCURRENCE = 9;
      MATERIAL_CITATION = 10;
    }

    required BasisOfRecord basisOfRecord = 1;
    repeated int32 x = 2 [packed=true];
    repeated int32 y = 3 [packed=true];
    repeated int32 year = 4 [packed=true];
    repeated int32 count = 5 [packed=true];

  }

  repeated Layer layers = 1;
}
